<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarStyle"
            app:titleTextColor="@android:color/white" />

    </android.support.design.widget.AppBarLayout>

    <!-- Firmware Version Base Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_margin="@dimen/dp14"
        android:orientation="vertical">
        <!-- Firmware App Version  Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Firmware App Version Label-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/label_app_firmware_version"
                android:textColor="@color/black" />
            <!-- Firmware App Version Value-->
            <TextView
                android:id="@+id/tvappVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25" />
        </LinearLayout>

        <!-- Firmware IOT Version  Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp14">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <!-- Firmware IOT Version Label-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/label_iot_firmware_version"
                    android:textColor="@color/black" />
                <!-- Firmware IOT Version Value-->
                <TextView
                    android:id="@+id/tvIotVersion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvWarningMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_padding"
            android:text="@string/warning_message_while_upgrade"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <Button
        android:id="@+id/btnFirmware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp30"
        android:background="@color/colorAccent"
        android:text="@string/firmware_upgrade"
        android:textSize="@dimen/text_large" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />


</RelativeLayout>