<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarStyle"
            app:titleTextColor="@color/white" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_addGadget_submit"
        android:layout_below="@id/appBarLayout">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til"
                android:layout_marginTop="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5">

                <EditText
                    android:layout_marginTop="@dimen/dp10"
                    android:id="@+id/et_gadget_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/gadget_name"
                    android:maxLength="15" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til1"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til"
                android:layout_margin="@dimen/dp5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:id="@+id/textspinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Gedget Type :" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/gadget_type"
                        android:nextFocusLeft="@id/textspinner"
                        android:prompt="@string/spinnerprompt"
                        android:spinnerMode="dialog"
                        android:text="@string/Selectname" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>


            <FrameLayout
                android:id="@+id/fl_img"
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp120"
                android:layout_below="@+id/til1"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/dp20">

                <ImageView
                    android:id="@+id/iv_ing"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp90"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/tv_black"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_select"
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="@dimen/dp10"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_weight="1"
                    android:background="@drawable/circular_image"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/edit_grey"
                    android:visibility="visible" />
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_addGadget_submit"
        android:layout_width="@dimen/dp120"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp20"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/submitbtn"
        android:textColor="@android:color/white" />
</RelativeLayout>
