<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarStyle"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:paddingBottom="80dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/spinnerDropdown" />


            <LinearLayout
                android:id="@+id/ll_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp10">

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/baseline_expand_down_gray_27"
                    android:paddingTop="10dp"
                    android:text="@string/startTime"
                    android:textStyle="bold" />


            </LinearLayout>

            <TimePicker
                android:id="@+id/start_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="spinner"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:id="@+id/ll_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp10">

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/baseline_expand_down_gray_27"
                    android:paddingTop="10dp"
                    android:text="@string/endTime"
                    android:textStyle="bold" />

            </LinearLayout>

            <TimePicker
                android:id="@+id/end_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="spinner"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:id="@+id/ll_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableRight="@drawable/baseline_expand_right_gray_15"
                        android:gravity="left"
                        android:paddingTop="1dp"
                        android:text="@string/repeatOn"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_everyday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="EveryDay" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/btn_save"
        android:textColor="@color/white"

        />

</RelativeLayout>
